""" Starterkit flavors in form of Bazel execution platforms. """

package(default_visibility = ["//visibility:public"])

# Anything falling in this category should not execute
platform(name = "DEV_NULL_PLATFORM")

platform(
    name = "starterkit-x86_64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    exec_properties = {
        "OSFamily": "Linux",
    },
)

# Please be aware,
# that you should select only ONE
# of the following platforms to be registered,
# or add more specific constraints.

platform(
    name = "ash",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash:frw2q28hzq4npaawgpsrbcivmj6bz7ql",
    },
)

platform(
    name = "ash-bash",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash:g5bxv084ripkp5s9739mgz2yjqz1gr33",
    },
)

platform(
    name = "ash-bash-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils:722li1p4169dma1401ryk1ydgz23r7jq",
    },
)

platform(
    name = "ash-bash-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686:qzmhc64pm3fwbv2hzcpm39bkvzx7ksf0",
    },
)

platform(
    name = "ash-bash-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-cc:7i4qvs5ycmaybpqzyrnskknx57gz6ysk",
    },
)

platform(
    name = "ash-bash-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-cc-x86_64:kw2pnfbclx1fpyrv6vavm3xb5adc1rha",
    },
)

platform(
    name = "ash-bash-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-cc-x86_64-cc:zcyjx1pps86bqpgrfiw3z77wgrxrn8ah",
    },
)

platform(
    name = "ash-bash-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-x86_64:mhfmyn38yyz70a499rnqqdb9jck6apmc",
    },
)

platform(
    name = "ash-bash-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-x86_64-cc:3nwg9fpfgbhdb40rvh53hi2l337zkwgd",
    },
)

platform(
    name = "ash-bash-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-x86_64:c3c5kklhcxx5rv355ck21wlhh2kyckan",
    },
)

platform(
    name = "ash-bash-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-x86_64-cc:7r2jyhlfd042x5p7dx45nm4y8dwjp5f7",
    },
)

platform(
    name = "ash-bash-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686:y63y14hq61z1s3hinimjgk07v5zp5n9s",
    },
)

platform(
    name = "ash-bash-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-cc:5carx8dmllw3wdfa1a34wpxw8aby6sfz",
    },
)

platform(
    name = "ash-bash-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-cc-x86_64:zp9jr0cikqcmgf0ka1y447x3gk1cb08y",
    },
)

platform(
    name = "ash-bash-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-cc-x86_64-cc:xbp825ayffjn8xpwhxvm72v8y8fqb474",
    },
)

platform(
    name = "ash-bash-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-x86_64:m6qkc9mv6js4gxx12894d0r64r03b1nq",
    },
)

platform(
    name = "ash-bash-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-x86_64-cc:c81ybpibkkhfwzgvvy60wwwdrk61ifrc",
    },
)

platform(
    name = "ash-bash-strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace:9g4k7pwla4m8vks2sik7xa3dawqgkp1n",
    },
)

platform(
    name = "ash-bash-strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils:6s8i0j2dmpayyagbb7m6ca26km4ja9qz",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686:rahi0mcxr09i7w8cv1y389m3d1h4awzx",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-cc:vvmmq8c90s7p1c9synklfs57kasgd6xj",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-cc-x86_64:8ymggx458i0g0n9s3dga2bdw8spwmp6s",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-cc-x86_64-cc:15aj8c1ygbz27q6w6khf0nlxs3priwiz",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-x86_64:ll6v4iw3p0qlvcgfl6yq6mpq281gw7sl",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-x86_64-cc:b9m92n81mm0m8ac0yd9bwqhbah8mcyx1",
    },
)

platform(
    name = "ash-bash-strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-x86_64:9q1w2ymw9px6y47q5q81l0a5zpp6b9p4",
    },
)

platform(
    name = "ash-bash-strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-x86_64-cc:5rsps4wx87kcdg7x4dqm05hjb5h7vhqa",
    },
)

platform(
    name = "ash-bash-strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686:hl21lasnmdbapkc51svgy6zbmscrsdx2",
    },
)

platform(
    name = "ash-bash-strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-cc:ncii9hvn8qpl61r5ixsh2qa1sschay28",
    },
)

platform(
    name = "ash-bash-strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-cc-x86_64:j2nw8g97krrhqp6drbdny1gxdfidgcyp",
    },
)

platform(
    name = "ash-bash-strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-cc-x86_64-cc:y6c8cvch78wa0b1cws19c5j61mmdif30",
    },
)

platform(
    name = "ash-bash-strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-x86_64:b3nrp3b4lv5nkdy0svk6fa1v5mhh2c7p",
    },
)

platform(
    name = "ash-bash-strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-x86_64-cc:ifs9rp6m0lqyf7cl0hfyw7ry1y3qw23m",
    },
)

platform(
    name = "ash-bash-strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-x86_64:ks052wpf0ri70q6jig293n8zzww6xb2i",
    },
)

platform(
    name = "ash-bash-strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-x86_64-cc:4kpplbczmvypkzw8n13plgqgrfdzwc6j",
    },
)

platform(
    name = "ash-bash-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-x86_64:rbwhcrzk71n8ksdw70chhglw03vk6zag",
    },
)

platform(
    name = "ash-bash-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-x86_64-cc:3crl06vrmv0s1ilvpdnbigrnnsqgdw5a",
    },
)

platform(
    name = "ash-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils:d5ivww7mcisqnbywwvlgxdnijkiik952",
    },
)

platform(
    name = "ash-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686:nckflkh9001kcms8v5l0612dfc9qvyjz",
    },
)

platform(
    name = "ash-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc:gq39wmc40qdsry9kac8999n17rn5vr20",
    },
)

platform(
    name = "ash-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc-x86_64:vj0d88rqy052daxva1w2k0i51dd9j4mz",
    },
)

platform(
    name = "ash-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc-x86_64-cc:frnl0x26sjn4rpd76sx15kiw9m766c1q",
    },
)

platform(
    name = "ash-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-x86_64:9a3drvphqdym402fdhynpk13a1fihmni",
    },
)

platform(
    name = "ash-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-x86_64-cc:r0p8cl9jjsx65cbd8w5f1ax7dmkw5zgg",
    },
)

platform(
    name = "ash-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-x86_64:0llvs5g44nhjarfsyyf55vq64z47lshq",
    },
)

platform(
    name = "ash-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-x86_64-cc:9z9cg39bhi05nnldi0pqixlqfcfp6s5p",
    },
)

platform(
    name = "ash-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686:1v2ni2wabnk223pxgz25bl1jczqa4mpk",
    },
)

platform(
    name = "ash-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc:aycmsypbiv9qllmc5jysixhs8jr5zcb6",
    },
)

platform(
    name = "ash-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc-x86_64:hfb1w2npr2gh1rynkd22qifcfjdrlnni",
    },
)

platform(
    name = "ash-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc-x86_64-cc:dv0hmds11qr9m2ncwj7cba7y5mb36hxi",
    },
)

platform(
    name = "ash-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-x86_64:qvkh28p5apy2yc9rknndjnh5acln52jx",
    },
)

platform(
    name = "ash-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-x86_64-cc:bibjf6lyhavawv3v885aq73qngnqy4yk",
    },
)

platform(
    name = "ash-strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace:xxha96lyw1ra4vp36rh6ys0h35sz4bxi",
    },
)

platform(
    name = "ash-strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils:8nj7ijih8lylfd3z4hhj20g86q9c102q",
    },
)

platform(
    name = "ash-strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686:ydbvjiiw2pknx46zvg7afdgndqm23l3p",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc:hb28vgdp0i8dw2s07j1s6amp68d3rgsw",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc-x86_64:29qa8nn79a60pyrvqdmlqdxqly85p0p4",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc-x86_64-cc:mcj3dw9qcjvnhsnzfgfdk9h96f7rvyd5",
    },
)

platform(
    name = "ash-strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-x86_64:6km53y1zaqkxm4hb582ricqisfy4pfg6",
    },
)

platform(
    name = "ash-strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-x86_64-cc:v6xpcbdxh0iyj4m8s5jl7f3s48jpxl93",
    },
)

platform(
    name = "ash-strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-x86_64:11a2jdhlqapcb9hpa9vn6ddrzgn4ck2r",
    },
)

platform(
    name = "ash-strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-x86_64-cc:rq3qjjgbkqmvjavqcdysjzx3rssrnbr6",
    },
)

platform(
    name = "ash-strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686:c4hb1j906ca50cwjd6s37i0bqck4a1mj",
    },
)

platform(
    name = "ash-strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc:25d55dziny6h8ng3zb7ahq1hm1rfxifa",
    },
)

platform(
    name = "ash-strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc-x86_64:fbh38v5vn7j8xygd2fyqv8jby71hhiii",
    },
)

platform(
    name = "ash-strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc-x86_64-cc:5y8kyrxqada764zx6hqfbhsms2z0psyr",
    },
)

platform(
    name = "ash-strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-x86_64:6w9nb4pz6nkyi8cgq15aqz3x4idpa8jq",
    },
)

platform(
    name = "ash-strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-x86_64-cc:z2f9cikkfj7959aspfpc8l6vaa196x2f",
    },
)

platform(
    name = "ash-strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-x86_64:pkklqvqza3d868zqid1ys593dbhmrqy6",
    },
)

platform(
    name = "ash-strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-x86_64-cc:mhyvc26ii23l15fyjvd20r51flxfcb7r",
    },
)

platform(
    name = "ash-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-x86_64:sbqnr8lpg7fgzahgjaim6375awabpjz2",
    },
)

platform(
    name = "ash-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-x86_64-cc:7w4ija8acf9p1lh0p7qlvgzr2qg3r8im",
    },
)

platform(
    name = "bash",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash:jxiv3jqnh8qq42c88hafqdf2llz2hxcf",
    },
)

platform(
    name = "bash-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils:406fh60s8z7b4jyxx9l802q85mns2zhc",
    },
)

platform(
    name = "bash-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686:2s7yyrpjc9d0rrr345hyc7mh651kqqgf",
    },
)

platform(
    name = "bash-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-cc:nxdvhihc46kvk3s39m32fjysayx1v2bp",
    },
)

platform(
    name = "bash-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-cc-x86_64:vaik80diciv31djaqln7qj05i4zf0jpc",
    },
)

platform(
    name = "bash-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-cc-x86_64-cc:8z5rchcxpx5r7f5sncymh1l8lw7b51la",
    },
)

platform(
    name = "bash-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-x86_64:bcmvy7qbjbg2akdpc751pfc29vmj9b34",
    },
)

platform(
    name = "bash-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-x86_64-cc:3bai6cadawq0j5048p319gq768vbpmgm",
    },
)

platform(
    name = "bash-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-x86_64:g9lxpwc7b7wfwl7xjf8d60mx6swn2m5p",
    },
)

platform(
    name = "bash-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-x86_64-cc:l7nzy9f6aa7spayanbd3y6xp0b6w7yiw",
    },
)

platform(
    name = "bash-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686:v6r2fdrz3c7rhxnfjp7qgwfqzpzm9qjj",
    },
)

platform(
    name = "bash-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-cc:3bf72p4wbsq5ncgq25q7fcycafz3zhi9",
    },
)

platform(
    name = "bash-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-cc-x86_64:jqlfyhggs1gz91nzr8flx3ygn4njm4dg",
    },
)

platform(
    name = "bash-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-cc-x86_64-cc:946ypy1xm3kwsq8d1y269f52b035w567",
    },
)

platform(
    name = "bash-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-x86_64:faa7npz509n1w3gfcv71s8pp0ygrk4wc",
    },
)

platform(
    name = "bash-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-x86_64-cc:gbvky818hwq9g0dx57icwqd6xgddsn9v",
    },
)

platform(
    name = "bash-strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace:iswv7crmk02924g90vzwnpxgy3pn3by9",
    },
)

platform(
    name = "bash-strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils:8dijqkh8rpx18rnv9c4r5i2xkyd92c7q",
    },
)

platform(
    name = "bash-strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686:i78vgp976nlvr9j45dnklj8f9npq53c8",
    },
)

platform(
    name = "bash-strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-cc:irb3cz2745i770ph875wiwch0v18qyhi",
    },
)

platform(
    name = "bash-strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-cc-x86_64:41zqv7z5dis1qgdgygfgjx98kqx4rkps",
    },
)

platform(
    name = "bash-strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-cc-x86_64-cc:pm6cb82w254a9bfx4mhna02frr58hr0n",
    },
)

platform(
    name = "bash-strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-x86_64:bxf17waxga7057shkdwk999p6jmfijnm",
    },
)

platform(
    name = "bash-strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-x86_64-cc:9pc6wadqaany0c4v8ckislqgm82ncfma",
    },
)

platform(
    name = "bash-strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-x86_64:sw9n27mhdpllvc7hpqjj0xhqrsmhyb76",
    },
)

platform(
    name = "bash-strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-x86_64-cc:gwb4rarpqx6xzkixfipnsww0l8crgqmc",
    },
)

platform(
    name = "bash-strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686:aby6l2h91s3wivvnl0ykxgk5b2d3fcs7",
    },
)

platform(
    name = "bash-strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-cc:6ylxv74bwa2zf3n9zsv2p5vrb6snn76b",
    },
)

platform(
    name = "bash-strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-cc-x86_64:hk4gxc2x8vrb11kqg66vwha5ysdgrsbf",
    },
)

platform(
    name = "bash-strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-cc-x86_64-cc:lc8p1b04n38s765l3ibn8b2vvxvh49bl",
    },
)

platform(
    name = "bash-strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-x86_64:isbjs51w3vgd25qs2i84xaf7z6dykn1x",
    },
)

platform(
    name = "bash-strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-x86_64-cc:f2lcs98swschqbzc660m4a49f1mwi65d",
    },
)

platform(
    name = "bash-strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-x86_64:44xdrb59kkzm0mv734p54m7rba8nik4n",
    },
)

platform(
    name = "bash-strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-x86_64-cc:ln9fizyz1g15dknysxrv6ynb9l8ncp8r",
    },
)

platform(
    name = "bash-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-x86_64:a3d38kkcymk5n5qnzrx0w12nq9z6af42",
    },
)

platform(
    name = "bash-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-x86_64-cc:9njv1cz2nnlb8k2fmk6m9hr94gdgjb54",
    },
)

platform(
    name = "coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils:klw5xqs2chizygp64ihifcm4khbm1x3d",
    },
)

platform(
    name = "coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686:kw77dm3cl5vhk8izq5h6mwxyxa7b7893",
    },
)

platform(
    name = "coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc:1wz4dnnzndryyvpzb0r5j9z8hwma2fy3",
    },
)

platform(
    name = "coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc-x86_64:zjn3mnb8jhmjvzb67h6dbb5rzzqkbqrf",
    },
)

platform(
    name = "coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc-x86_64-cc:2hlpkjmik0vy3fy4x623kpw8ggvnv5p6",
    },
)

platform(
    name = "coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-x86_64:naj8mfqn9alxgbx9cgd3ji2ca04na9yi",
    },
)

platform(
    name = "coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-x86_64-cc:q4p3924cc7a6xk3x2ddbz56pd0v3q8jk",
    },
)

platform(
    name = "coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-x86_64:fn7i1jd3cm81288vnfn85l2l9v8870wd",
    },
)

platform(
    name = "coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-x86_64-cc:r5ampg4dgyr39qx2vavv1pd61r9hpik9",
    },
)

platform(
    name = "i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686:39vjl8lyzv9cvkqpzzqkmq6h7r11f6m6",
    },
)

platform(
    name = "i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc:l0f5jp2v4qni8s43yys4bqy28n0svip7",
    },
)

platform(
    name = "i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc-x86_64:zgh95bly86w6ig6dzwfhv7cypmyiadgy",
    },
)

platform(
    name = "i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc-x86_64-cc:a5z03kbpb3myrgp3bx7f222x03q693s2",
    },
)

platform(
    name = "i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-x86_64:1ld2cpk8pyy7kimccpqj7dsb4haxnlvk",
    },
)

platform(
    name = "i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-x86_64-cc:ns42bid46l2z9fjlm1d03is8igw3w8qj",
    },
)

platform(
    name = "strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace:50ng9li0192h16wy4hsjgwbzlmry8d4g",
    },
)

platform(
    name = "strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils:3sqddf97kqkz3wva2kmi49mg76jln247",
    },
)

platform(
    name = "strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686:2jq66m348bi72azl1qa90fdd1v5walk7",
    },
)

platform(
    name = "strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc:x7pxv73kdz9x3q4hf6cvza0slm8l8ndi",
    },
)

platform(
    name = "strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc-x86_64:f71szkh9ljh4gzpzjndkxgwc65sbq7z7",
    },
)

platform(
    name = "strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc-x86_64-cc:y4wnvpv3b2shbjkqbrmdawhycmghahmh",
    },
)

platform(
    name = "strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-x86_64:7fw66cs9c1jsvw19msiq5sl5c75ix68c",
    },
)

platform(
    name = "strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-x86_64-cc:8b2ch49az7mgy0av6v5v7f5awahxwf75",
    },
)

platform(
    name = "strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-x86_64:3i28rhf1ssnwjx5y32r8krr9xg60hqr5",
    },
)

platform(
    name = "strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-x86_64-cc:svjgplnv5ay3yhclkw0s79h703sbp445",
    },
)

platform(
    name = "strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686:n468rw45mm8dig5l6jr0cn9jj90lhzmz",
    },
)

platform(
    name = "strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc:ldiyga81w7rvdyqv95z0lpdylhblxa43",
    },
)

platform(
    name = "strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc-x86_64:rrcih4jv6k0rr2lxp5kiry5y8flgnr9s",
    },
)

platform(
    name = "strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc-x86_64-cc:gykdllf14f9fyrm9rqby4fwrdrx3c8if",
    },
)

platform(
    name = "strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-x86_64:9cmscgw088igv3fsk19dab8wkj9ida9d",
    },
)

platform(
    name = "strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-x86_64-cc:kfchjmzzlzw287frayw4k5vnb3vp44l9",
    },
)

platform(
    name = "strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-x86_64:6b6kn7xrmv1i2f0xyhkgjlzf23lfnlqf",
    },
)

platform(
    name = "strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-x86_64-cc:047dzkfc42pcx76qpqn34mskzvfgbh00",
    },
)

platform(
    name = "x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/x86_64:x58121n6iznjxr7s0iw7cw6vkx4h7lji",
    },
)

platform(
    name = "x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/x86_64-cc:lrz1r1sbjwgliq1nvsslhbyfbwn0vfmd",
    },
)

